# WEB_TicTacToe

./: Cargo.toml  README.md
front/: index.css  index.html  index.js
src/back/: main.rs
src/back/game/: tictactoe.rs
